다중파일(여러개 저장) 추가

--- a/src/main/resources/templates/adopt/adoptDetail.html
+++ b/src/main/resources/templates/adopt/adoptDetail.html
@@ -46,7 +46,9 @@
 <!--    <tr th:if="${adopt.fileAttached == 1}">-->
     <tr>
         <th>강아지 사진</th>
-        <td><img th:src="@{|/upload/${adopt.storedFileName}}" alt="등록한 사진이 없어요!"></td>
+        <td th:each="fileName:${adopt.storedFileName}">
+            <img th:src="@{|/upload/${fileName}}" alt="등록한 사진이 없어요!">
+        </td>
     </tr>
     <tr>
         <th>제목:</th>
