--- a/src/main/resources/templates/adopt/adoptSave.html
+++ b/src/main/resources/templates/adopt/adoptSave.html
@@ -69,7 +69,7 @@
     </select>
     <br>
     사진:※필수입니다.
-    <input type="file" class="form-control" name="adoptFile">
+    <input type="file" class="form-control" name="adoptFile" multiple>
     <br>
     <input type="button" class="btn btn-primary mt-5" value="등록하기" onclick="adoptSave()">
   </form>
