--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
 <main class="container mt-5">
 <div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://img.freepik.com/free-photo/portrait-of-little-cute-dog-bichon-frise-isolated-over-white-background_155003-46153.jpg?w=1380&t=st=1672640660~exp=1672641260~hmac=12a06fe6a1d80151deb85e8f876f2bd288151f4dfcb740f1682743d0422c7c4f');background-size: cover; margin-top: 100px">
     <div class="col-md-6 px-0" >
-        <h1 class="display-4 fst-italic" style="color: black" >Hi My Buddy에서 <br> 소중한 <br> 친구가 <br> 기다리고 <br> 있어요</h1>
+        <h1 class="display-4 fst-italic" style="color: black" >Welcome to <br> Hi My buddy <br>당신과 반려견의<br>이야기를<br>시작해보세요.</h1>
         <p class="lead my-3" style="color: black">더 좋은 환경에서 <br> 아이들의 하나뿐인 <br> 친구가 되어주세요</p>
         <p class="lead mb-0">
             <a href="#" class="text-black fw-bold">
