입양기록 저장 구현

--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -48,7 +48,7 @@
           <div th:if="${session.loginEmail}">
             <nav class="nav d-flex justify-content-between">
           <a class="p-2 link-secondary" href="/adopt" ><strong>입양글</strong></a>
-          <a class="p-2 link-secondary" href="#" ><strong>입양신청</strong></a>
+          <a class="p-2 link-secondary" href="/successFind" ><strong>입양후기</strong></a>
           <a class="p-2 link-secondary" th:href="@{|/adoptSave/${session.loginEmail}|}"><strong>입양등록</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>반려용품</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>FAQ</strong></a>
