--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -61,8 +61,8 @@
 
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-black">분양등록</strong>
-                <h3 class="mb-0">분양신청 방법</h3>
+                <strong class="d-inline-block mb-2 text-black">입양등록</strong>
+                <h3 class="mb-0">입양등록 방법</h3>
                 <div class="mb-1 text-muted">설명</div>
                 <p class="mb-auto">내 친구를 더 좋은 환경으로 보내줄 수 있습니다. <br> 자세한 내용을 확인해 주세요.</p>
                 <div th:if="${session.loginEmail}">
