--- a/src/main/resources/templates/product/productMain.html
+++ b/src/main/resources/templates/product/productMain.html
@@ -17,6 +17,9 @@
             float: left;
             margin-left: 100px;
         }
+        h3 {
+            width: 300px;
+        }
     </style>
 </head>
 <body>
@@ -25,43 +28,14 @@
     <div th:if="${session.loginEmail == 'admin'}">
     <a href="/productSave" class="btn btn-dark">관리자 상품등록</a>
     </div>
-    <h1>MainProducts</h1>
+    <h1><strong>MainProducts</strong></h1>
 <ul>
-    <li>
-        <img src="https://shop-phinf.pstatic.net/20221023_124/1666509804360LTKg8_JPEG/67645639108152485_1108450180.jpg?type=f296_296" alt="">
-        <h2><strong>상품명:</strong>뽀그리</h2>
-        <h3>설명: 따듯한 제품입니다.</h3>
-        <h4>가격:12000원</h4>
-    </li>
-    <li>
-        <img src="https://shop-phinf.pstatic.net/20211002_241/1633101445378tuuGx_JPEG/34237334076301795_1116667749.jpg?type=f296_296" alt="">
-        <h2><strong>상품명:</strong>뽀그리</h2>
-        <h3>설명: 따듯한 제품입니다.</h3>
-        <h4>가격:12000원</h4>
-    </li>
-    <li>
-        <img src="https://shop-phinf.pstatic.net/20201025_220/1603636052848o5u0G_JPEG/4771898540283284_1979468049.jpg?type=f296_296" alt="">
-        <h2><strong>상품명:</strong>뽀그리</h2>
-        <h3>설명: 따듯한 제품입니다.</h3>
-        <h4>가격:12000원</h4>
-    </li>
-    <li>
-        <img src="https://shop-phinf.pstatic.net/20221001_287/1664610499166uDi1V_JPEG/65746278782273668_619791289.jpg?type=f296_296" alt="">
-        <h2><strong>상품명:</strong>뽀그리</h2>
-        <h3>설명: 따듯한 제품입니다.</h3>
-        <h4>가격:12000원</h4>
-    </li>
-    <li>
-        <img src="https://shop-phinf.pstatic.net/20221118_67/16687056157895WEg9_JPEG/69841504471859921_1738609277.jpg?type=f295_381" alt="">
-        <h2><strong>상품명:</strong>뽀그리</h2>
-        <h3>설명: 따듯한 제품입니다.</h3>
-        <h4>가격:12000원</h4>
-    </li>
-    <li>
-        <img src="https://shop-phinf.pstatic.net/20221022_50/16664261602301Umxn_JPEG/67562048793049700_788756432.jpg?type=f295_381" alt="">
-        <h2><strong>상품명:</strong>뽀그리</h2>
-        <h3>설명: 따듯한 제품입니다.</h3>
-        <h4>가격:12000원</h4>
+    <li th:each="product:${productList}">
+        <img th:src="@{|/upload/${product.storedFileName}}" width="220px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!">
+        <h2 th:text="'상품명:'+' '+${product.productName}"></h2>
+        <h3 th:text="'설명:'+${product.productContents}" ></h3>
+        <h4 th:text="'가격:'+${product.productPrice}+'원'"></h4>
+        <h5 th:text="'조회수:'+${product.productHits}"></h5>
     </li>
 </ul>
 </div>
