반려용품 상품 조회 페이징처리

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -79,6 +79,7 @@
     </div>
 </div>
     </div>
+<!--    <a href="/product" class="btn btn-dark">반려용품</a>-->
 </main>
 <div>
 <div class="container" style="margin-top: 100px" >
