--- a/src/main/resources/templates/product/productMain.html
+++ b/src/main/resources/templates/product/productMain.html
@@ -18,7 +18,7 @@
             margin-left: 100px;
         }
         h3 {
-            width: 300px;
+            width: 250px;
         }
     </style>
 </head>
@@ -31,7 +31,7 @@
     <h1><strong>MainProducts</strong></h1>
 <ul>
     <li th:each="product:${productList}">
-        <img th:src="@{|/upload/${product.storedFileName}}" width="220px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!">
+        <img th:src="@{|/upload/${product.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!">
         <h2 th:text="'상품명:'+' '+${product.productName}"></h2>
         <h3 th:text="'설명:'+${product.productContents}" ></h3>
         <h4 th:text="'가격:'+${product.productPrice}+'원'"></h4>
@@ -39,5 +39,17 @@
     </li>
 </ul>
 </div>
+<!--<div class="container mt-5" style="margin-top: 500px" >-->
+<!--    <footer class="py-3 my-4">-->
+<!--        <ul class="nav justify-content-center border-bottom pb-3 mb-3">-->
+<!--            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">입양소식</a></li>-->
+<!--            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">입양신청</a></li>-->
+<!--            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">분양등록</a></li>-->
+<!--            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">임시보호 소식</a></li>-->
+<!--            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">친구를 찾아요</a></li>-->
+<!--        </ul>-->
+<!--        <p class="text-center text-muted">2022 JinSeok Project </p>-->
+<!--    </footer>-->
+<!--</div>-->
 </body>
 </html>
